--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,10 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -48,6 +51,11 @@
 			<version>1.18.26</version>
 			<scope>provided</scope>
 		</dependency>
+	 <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.23</version> <!-- 使用你需要的版本 -->
+</dependency>
 	 
 	</dependencies>
 
