--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+##context path 
+server.servlet.context-path=/
 server.port=8080
 spring.thymeleaf.prefix=classpath:/webapp/
 spring.thymeleaf.suffix=.html
