--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.thymeleaf.suffix=.html
 #spring.jpa.defer-datasource-initialization=false
 
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://34.80.174.20:3306/rfid_db
-spring.datasource.username=rfid-user
-spring.datasource.password=%TGB6yhn&UJM
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/rfid_db
+spring.datasource.username=root
+spring.datasource.password=123456
 
 #spring.jpa.database=mysql
 #spring.datasource.url=jdbc:mysql://35.201.162.92:3306/phishdb
