--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,13 +9,13 @@ spring.thymeleaf.suffix=.html
 #spring.jpa.hibernate.use-new-id-generator-mappings=false
 #spring.jpa.defer-datasource-initialization=false
 
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/rfid_db
-spring.datasource.username=root
-spring.datasource.password=
-
 #spring.jpa.database=mysql
-#spring.datasource.url=jdbc:mysql://35.201.162.92:3306/phishdb
-#spring.datasource.username=apphish
-#spring.datasource.password=2023twmdatpwd@
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/rfid_db
+#spring.datasource.username=root
+#spring.datasource.password=
+
+spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://34.80.174.20:3306/rfid_db
+spring.datasource.username=rfid-user
+spring.datasource.password=%TGB6yhn&UJM
 
