--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,13 @@ spring.thymeleaf.suffix=.html
 #spring.datasource.username=root
 #spring.datasource.password=
 
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://34.80.174.20:3306/rfid_db
-spring.datasource.username=rfid-user
-spring.datasource.password=%TGB6yhn&UJM 
+#spring.jpa.database=mysql
+#spring.datasource.url=jdbc:mysql://34.80.174.20:3306/rfid_db
+#spring.datasource.username=rfiduser
+#spring.datasource.password=${RFID_DB_PWD}
 
+#jdbc:mysql://10.122.64.3:3306/rfid_db
+spring.jpa.database=mysql
+spring.datasource.url=${RFID_DB_URL}
+spring.datasource.username=rfiduser
+spring.datasource.password=${RFID_DB_PWD}
